// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DataPair matches snapshot when priority is normal 1`] = `
<div
  className="sc-aXZVg hAXxrc"
/>
`;

exports[`DataPair matches snapshot when priority is primary 1`] = `
<div
  className="sc-aXZVg kpDYPC"
/>
`;
